syntax = "proto3";

package preload.v1;
import "google/api/annotations.proto";
import "protoc-gen-validate/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "git.yingzhongshare.com/mkt/kitty/proto;kitty";

option (options.openapiv2_swagger) = {
  info: {
    title: "资源预加载服务v1",
    version: "1.0.0",
    contact: {
      name: "李太新",
      email: "litaixin@donews.com",
    }
  };
  base_path: "/preload/v1";
  consumes: "application/json";
  produces: "application/json";
  external_docs: {
    description: "商业化中台文档"
    url: "http://monetization-docs.xg.tagtic.cn/#/"
  };
};


service Preload {
  // 获取 preload 预加载资源地址
  rpc ListInfo (PreloadReq) returns (PreloadResp) {
    option (google.api.http) = {
        get: "/infoList"
    };
  }
}

message PreloadReq {
  repeated string preloadHostList = 1[
       (validate.rules).repeated.items.string.min_len=2,
       (validate.rules).repeated.items.string.prefix="http"
  ];
}

message PreloadResp {
  int32 code = 1;
  string msg = 2;
  repeated PreloadInfo data = 3;
}

message PreloadInfo {
  string gzurl = 1;
  string md5 = 2;
  string weburl = 3;
}
